--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     <li><strong>Help Center:</strong> Visit the RoboForm Help Center for self-help articles and guides. The Help Center has a comprehensive database of FAQs and troubleshooting tips that may resolve your issue.</li>
                     <li><strong>Community Forums:</strong> RoboForm has an active user community where you can post questions, find solutions, and engage with other users.</li>
                 </ul>
-                <p class="section-content">For immediate help, you can visit the support page: <a href="https://getchatsupport.live/" target="_blank">Get Chat Support</a></p>
+                <p class="section-content">For immediate help, you can visit the support page Get Chat Support</p>
             </div>
         </section>
     </div>
