--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="RoboForm login, RoboForm sign in, RoboForm download, RoboForm install, RoboForm not working, RoboForm support, RoboForm customer service, RoboForm customer care">
     <meta name="author" content="RoboForm Support Team">
     <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="lCa3ZsFKqDyrxxhQ2QtZYtJQSDBKfEcMfLPGrA8BQQI" />
     <!-- Start of  Zendesk Widget script -->
     <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=7668c976-0fb7-47ee-8740-3e9115bdb10f"> </script>
     <!-- End of  Zendesk Widget script -->
